fix text break on artist card

--- a/src/assets/scss/Global/basic.scss
+++ b/src/assets/scss/Global/basic.scss
@@ -9,12 +9,6 @@
   transition: transform 0.3s ease-in-out;
 }
 
-.ellipsis {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
 .ellip {
   display: -webkit-box;
   -webkit-line-clamp: 1;
